Added loggers and MongoRepository.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.security.user.name=user
 spring.security.user.password=password
 spring.security.basic.enabled=true
+
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
